--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -8,5 +9,47 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".50">
+
     </com.github.barteksc.pdfviewer.PDFView>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".50"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/commentsList"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="80"
+            android:gravity="top"
+            android:scrollbars="vertical" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="20"
+            android:gravity="bottom">
+
+            <EditText
+                android:id="@+id/yourComment"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:hint="@string/your_comment"
+                android:inputType="textImeMultiLine" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:src="@drawable/ic_stat_name"
+                android:background="#00000000"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
