--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -41,13 +41,15 @@
                 android:inputType="textImeMultiLine" />
 
             <ImageButton
+                android:id="@+id/sendComment"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="end"
                 android:src="@drawable/ic_stat_name"
                 android:background="#00000000"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp"/>
+                android:paddingRight="5dp"
+                android:onClick="onClickButton"/>
 
         </LinearLayout>
 
