--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -18,6 +18,12 @@
         android:layout_weight=".50"
         android:orientation="vertical">
 
+
+        <ImageView
+            android:layout_width="150px"
+            android:layout_height="150px"
+            android:id="@+id/myImage"/>
+
         <ListView
             android:id="@+id/commentsList"
             android:layout_width="match_parent"
@@ -31,6 +37,17 @@
             android:layout_height="0dp"
             android:layout_weight="20"
             android:gravity="bottom">
+
+            <ImageButton
+                android:id="@+id/makePhoto"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:src="@mipmap/ic_add_photo"
+                android:background="#00000000"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:onClick="onClickButtonAddPhoto"/>
 
             <EditText
                 android:id="@+id/yourComment"
