--- a/app/src/main/res/layout/listview_comment_item.xml
+++ b/app/src/main/res/layout/listview_comment_item.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pdfComment"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:text="lorem ipsum dolor sit amet"
-    android:textSize="20sp"
-    android:drawableEnd="@drawable/ic_stat_name">
-</TextView>
+    android:orientation="horizontal">
+
+
+    <TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pdfComment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text=""
+        android:textSize="16sp">
+    </TextView>
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/myImage"/>
+
+</LinearLayout>
