--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -8,14 +8,14 @@
         android:id="@+id/pdfView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight=".50">
+        android:layout_weight="50">
 
     </com.github.barteksc.pdfviewer.PDFView>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight=".50"
+        android:layout_weight="50"
         android:orientation="vertical">
 
 
