--- a/app/src/main/res/layout/listview_comment_item.xml
+++ b/app/src/main/res/layout/listview_comment_item.xml
@@ -9,16 +9,19 @@
     <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pdfComment"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text=""
-        android:textSize="16sp">
+        android:textSize="16sp"
+        android:layout_weight="60">
     </TextView>
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/myImage"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="40"
+        android:id="@+id/myImage"
+        android:onClick=""/>
 
 </LinearLayout>
