--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ru.spbau.lecturenotes.SecondAct"
-    tools:showIn="@layout/activity_second">
+    tools:context="ru.spbau.lecturenotes.activities.MainMenuActivity"
+    tools:showIn="@layout/app_bar_main_menu">
 
 </android.support.constraint.ConstraintLayout>
