--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -11,7 +11,7 @@
     tools:showIn="@layout/app_bar_main_menu">
 
     <ListView
-        android:id="@+id/pdf_list"
+        android:id="@+id/groups_list"
         android:layout_width="345dp"
         android:layout_height="390dp"
         android:layout_marginBottom="8dp"
@@ -24,4 +24,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.19" />
+
+    <ProgressBar
+        android:id="@+id/groups_spinner"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.338" />
+
 </android.support.constraint.ConstraintLayout>
