--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -5,11 +5,32 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <ru.spbau.lecturenotes.TouchableListView
+    <ListView
         android:id="@+id/pdfPictureListView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="50" />
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pdfPage"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="50"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/justImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/term1_algebra_05" />
+
+        <ru.spbau.lecturenotes.DragRectView
+            android:id="@+id/dragRect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+    </FrameLayout>
+
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -33,5 +54,52 @@
             android:layout_marginEnd="@dimen/fab_margin"
             android:onClick="onClickPlusButtonGoToCommentMode"
             android:src="@drawable/ic_action_add" />
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/commentModeSettings"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="50"
+        android:visibility="gone">
+
+        <ListView
+            tools:listitem="@layout/listview_attach_image_item"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_above="@+id/editTextComment"
+            android:background="@color/colorPrimary" />
+
+        <ImageButton
+            android:id="@+id/imageButtonAttachment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:background="#00000000"
+            android:src="@mipmap/ic_add_photo" />
+
+        <EditText
+            android:id="@+id/editTextComment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/imageButtonAttachment"
+            android:layout_toStartOf="@+id/buttonSendComment"
+            android:hint="@string/your_comment"
+            android:inputType="textMultiLine"
+            android:maxLines="4" />
+
+        <ImageButton
+            android:id="@+id/buttonSendComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:background="#00000000"
+            android:paddingBottom="10dp"
+            android:src="@drawable/ic_stat_name"
+            android:onClick="onClickButtonSendComment"/>
     </RelativeLayout>
 </LinearLayout>
