learn to use imageMatrix

--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -27,8 +27,7 @@
         <ru.spbau.lecturenotes.DragRectView
             android:id="@+id/dragRect"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:layout_height="wrap_content" />
     </FrameLayout>
 
 
