--- a/app/src/main/res/layout/listview_comment_item.xml
+++ b/app/src/main/res/layout/listview_comment_item.xml
@@ -16,11 +16,11 @@
         android:layout_weight="60">
     </TextView>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="40"
-        android:id="@+id/myImage"
-        android:onClick=""/>
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="40"-->
+        <!--android:id="@+id/myImage"-->
+        <!--android:onClick=""/>-->
 
 </LinearLayout>
