--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#332F2C</color>
+    <color name="colorPrimaryDark">#262222</color>
+    <color name="colorAccent">#3F51B5</color>
+    <color name="colorBackgroundLignt">#EDEDED</color>
+    <color name="colorBackgroundDark">#0a0a0a</color>
 </resources>
