--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#332F2C</color>
     <color name="colorPrimaryDark">#262222</color>
     <color name="colorAccent">#3F51B5</color>
-    <color name="colorBackgroundLignt">#EDEDED</color>
+    <color name="colorBackgroundLight">#EDEDED</color>
     <color name="colorBackgroundDark">#0a0a0a</color>
+    <color name="backgroundLight">#ededed</color>
 </resources>
