--- a/app/src/main/res/menu/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_main_menu_drawer.xml
@@ -3,23 +3,23 @@
 xmlns:tools="http://schemas.android.com/tools"
 tools:showIn="navigation_view">
 
-<item android:title="Authorisation">
-    <menu>
-        <item
-            android:id="@+id/nav_si"
-            android:icon="@drawable/ic_arrow_forward_black_24dp"
-            android:title="Sign in" />
-    </menu>
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_sign_out"
-            android:title="Sign out" />
-        <item
-            android:id="@+id/nav_settings"
-            android:title="Settings" />
-    </group>
+    <item android:title="Groups managing">
+        <menu>
+            <item
+                android:id="@+id/nav_join_request"
+                android:icon="@drawable/ic_arrow_forward_black_24dp"
+                android:title="Send join request" />
+        </menu>
+        <group android:checkableBehavior="single">
+            <item
+                android:id="@+id/nav_sign_out"
+                android:title="Sign out" />
+            <item
+                android:id="@+id/nav_settings"
+                android:title="Settings" />
+        </group>
 
-</item>
+    </item>
 
 </menu>
 
