--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -22,7 +22,7 @@
             android:id="@+id/photoView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/term1_algebra_05"/>
+            android:src="@drawable/term1_algebra_03"/>
 
         <ru.spbau.lecturenotes.uiElements.PdfViewer.DragRectView
             android:id="@+id/dragRect"
@@ -44,6 +44,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <ProgressBar
+            android:id="@+id/commentsListProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
@@ -52,8 +58,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="@dimen/fab_margin"
             android:layout_marginEnd="@dimen/fab_margin"
-            android:onClick="onClickPlusButtonGoToCommentMode" />
-            <!--android:src="@drawable/ic_action_add" -->
+            android:onClick="onClickPlusButtonGoToCommentMode"
+            android:src="@drawable/ic_add_comment"/>
     </RelativeLayout>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -80,15 +86,6 @@
             android:background="@color/colorPrimary"
             android:visibility="invisible"/>
 
-        <ImageButton
-            android:id="@+id/imageButtonAttachment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:background="#00000000" />
-            <!--android:src="@mipmap/ic_add_photo" -->
-
         <EditText
             android:id="@+id/editTextComment"
             android:layout_width="match_parent"
@@ -108,7 +105,8 @@
             android:layout_alignParentEnd="true"
             android:background="#00000000"
             android:paddingBottom="10dp"
-            android:src="@drawable/ic_stat_name"
+            android:paddingRight="10dp"
+            android:src="@drawable/ic_send_comment_new"
             android:onClick="onClickButtonSendComment"/>
     </RelativeLayout>
 </LinearLayout>
